--- a/package.json
+++ b/package.json
@@ -9,16 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@fortawesome/fontawesome-svg-core": "^6.5.1",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@fullcalendar/core": "^6.1.11",
-    "@fullcalendar/daygrid": "^6.1.11",
-    "@fullcalendar/interaction": "^6.1.11",
-    "@fullcalendar/react": "^6.1.11",
-    "@mui/icons-material": "^5.15.14",
-    "@mui/material": "^5.15.14",
     "microcms-js-sdk": "^3.0.0",
     "next": "14.1.3",
     "react": "^18",
@@ -26,10 +16,12 @@
     "react-icons": "^5.0.1"
   },
   "devDependencies": {
+    "@types/node": "^20.12.7",
     "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
     "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3"
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.4.5"
   }
 }
