--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react": "^18.2.79",
     "microcms-js-sdk": "^3.0.0",
     "next": "14.1.3",
     "react": "^18",
